fix: menu layout and background shift threshold for mobile

--- a/src/sections/Menu.css
+++ b/src/sections/Menu.css
@@ -29,9 +29,10 @@
 
 .menu-img-wrap img {
   width: 100%;
-  height: 340px;
+  aspect-ratio: 1 / 1;
   object-fit: cover;
   display: block;
+  height: auto;
 }
 
 .menu-info {
@@ -79,10 +80,6 @@
     grid-column: 1 / 3;
     padding: 0;
   }
-
-  .menu-img-wrap img {
-    height: 280px;
-  }
 }
 
 /* Mobile */
@@ -103,16 +100,5 @@
   .menu-text-block {
     grid-column: 1;
     padding: 0;
-  }
-
-  .menu-img-wrap img {
-    height: 260px;
-  }
-}
-
-/* Small mobile */
-@media (max-width: 480px) {
-  .menu-img-wrap img {
-    height: 220px;
   }
 }
